# xsnumpy

./: .gitignore  LICENSE  README.rst  pyproject.toml
tests/: _core_test.py
xsnumpy/: __init__.py  _core.py  _numeric.py  _random.py  _typing.py  _utils.py  version.py
xsnumpy/_core/: _dtype.py
xsnumpy/_typing/: __init__.py  _dtype_like.py  _shape.py
