[build-system]
requires = [ "setuptools", "setuptools-scm" ]
build-backend = "setuptools.build_meta"

[project]
name = "xsnumpy"
dynamic = [ "version", "dependencies" ]
description = "A pure Python implementation of NumPy ndarray."
readme = "README.rst"
requires-python = ">=3.12"
license.file = "LICENSE"
authors = [
  { name = "Akshay Mestry", email = "xa@mes3.dev" }
]
keywords = [ "python", "numpy" ]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation"
]
urls.Code = "https://github.com/xames3/xsnumpy"
urls.Download = "https://pypi.org/project/xsnumpy/"
urls.Homepage = "https://github.com/xames3/xsnumpy/"
urls."Issue tracker" = "https://github.com/xames3/xsnumpy/issues"

[tool.setuptools]
packages = ["xsnumpy"]

[tool.setuptools.dynamic]
version = { attr = "xsnumpy.version" }
dependencies = { file = "requirements-dev.txt" }

[tool.black]
line-length = 80

[tool.isort]
profile = "black"
line_length = 80
force_single_line = true
force_sort_within_sections = false

[tool.mypy]
files = ["xsnumpy/*.py", "docs/*.py"]
show_error_codes = true
show_error_context = true
pretty = true
strict = true
show_column_numbers = true
warn_unreachable = true
warn_unused_ignores = true
