[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "xsnumpy"
dynamic = ["version"]
description = "A pure Python implementation of NumPy ndarray."
readme = "README.rst"
requires-python = ">=3.10"
license.file = "LICENSE"
authors = [
  { name = "Akshay Mestry", email = "xa@mes3.dev" }
]
keywords = ["python", "numpy"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation"
]
urls.Code = "https://github.com/xames3/xsnumpy"
urls.Download = "https://pypi.org/project/xsnumpy/"
urls.Homepage = "https://github.com/xames3/xsnumpy/"
urls."Issue tracker" = "https://github.com/xames3/xsnumpy/issues"

[tool.setuptools]
packages = ["xsnumpy"]

[tool.setuptools.dynamic]
version = {attr = "xsnumpy.version"}

[tool.black]
line-length = 80

[tool.isort]
profile = "black"
line_length = 80
force_single_line = true
force_sort_within_sections = false

[tool.mypy]
files = ["xsnumpy/*.py"]
show_error_codes = true
show_error_context = true
pretty = true
strict = true
show_column_numbers = true
warn_unreachable = true
warn_unused_ignores = true
warn_unused_configs = true
check_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
disable_error_code = ["attr-defined", "index", "union-attr"]

[[tool.mypy.overrides]]
module = [
  "xsnumpy.*",
  "xsnumpy._core.*",
  "xsnumpy._typing.*",
]
disable_error_code = ["name-defined"]

[tool.tox]
requires = ["tox>=4"]
envlist = ["py312", "py311", "py310"]

[tool.tox.env_run_base]
description = "Linting code and running static type checking on {base_python}"
deps = [
  "black",
  "flake8",
  "isort",
  "mypy",
  "mypy-extensions",
  "typing_extensions",
]
commands = [
  ["black", "-q", {replace = "posargs", default = ["xsnumpy/"], extend = true}],
  ["flake8", {replace = "posargs", default = ["xsnumpy/"], extend = true}, "--per-file-ignores", "__init__.py:F403,F405" ],
  ["isort", "--sl", {replace = "posargs", default = ["xsnumpy/"], extend = true}],
  ["mypy", {replace = "posargs", default = ["xsnumpy/"], extend = true}],
]

[tool.tox.gh.python]
"3.13" = ["3.13", "type", "pkg_meta"]
"3.12" = ["3.12"]
"3.11" = ["3.11"]
"3.10" = ["3.10"]
